; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/drivers/dma/extr_dma-api.c_get_dma_residue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/drivers/dma/extr_dma-api.c_get_dma_residue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.dma_channel*)* }
%struct.dma_channel = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_dma_residue(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.dma_info*, align 8
  %5 = alloca %struct.dma_channel*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.dma_info* @get_dma_info(i32 %6)
  store %struct.dma_info* %7, %struct.dma_info** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call %struct.dma_channel* @get_dma_channel(i32 %8)
  store %struct.dma_channel* %9, %struct.dma_channel** %5, align 8
  %10 = load %struct.dma_info*, %struct.dma_info** %4, align 8
  %11 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.dma_channel*)*, i32 (%struct.dma_channel*)** %13, align 8
  %15 = icmp ne i32 (%struct.dma_channel*)* %14, null
  br i1 %15, label %16, label %24

16:                                               ; preds = %1
  %17 = load %struct.dma_info*, %struct.dma_info** %4, align 8
  %18 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32 (%struct.dma_channel*)*, i32 (%struct.dma_channel*)** %20, align 8
  %22 = load %struct.dma_channel*, %struct.dma_channel** %5, align 8
  %23 = call i32 %21(%struct.dma_channel* %22)
  store i32 %23, i32* %2, align 4
  br label %25

24:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %16
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local %struct.dma_info* @get_dma_info(i32) #1

declare dso_local %struct.dma_channel* @get_dma_channel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
